pxc/tests/test_001_px/constinh3.px
public namespace constinh3;
import core::common -;


pure interface ifoo {
  public function long mfoo(long v);
}

pure struct sfoo < ifoo > {
  public function long mfoo(long v) const { // error: constness
    return v + 3;
  }
}

{
  ptr{sfoo} p = make_ptr(sfoo());
  ptr{ifoo} ip = p;
  println(ip->mfoo(3));
}
